# gagent-desktop

./: .gitattributes  .gitignore  README.md  package-lock.json  package.json
backend/: README.md  agentmain.py  mykey_template.py  openai_agentmain.py  patch_hard_constraints.py  pyproject.toml  requirements-desktop.txt  requirements-e2e.txt  requirements.txt  wechat_decrypt.bat  wechat_decrypt.py
backend/assets/: code_run_header.py  global_mem_insight_template.txt  global_mem_insight_template_en.txt  sys_prompt.txt  sys_prompt_en.txt  tools_schema.json  tools_schema_cn.json
backend/core/: TMWebDriver.py  __init__.py  agent_factory.py  agent_loop.py  agentmain.py  browser_agent.py  cli.py  ga.py  hook_bus.py  llm_capabilities.py  llmcore.py  openai_agentmain.py  router_rules.py  runtime_env.py  simphtml.py  win32_console.py
backend/eval_registry/: README.md  __init__.py  registry.py  run_convergence_checks.py  run_eval_cases.py  score_eval_result.py  score_final_answer.py  score_functionality.py  validate_eval_registry.py
backend/frontends/: chatapp_common.py  file_processor.py
backend/memory/: __init__.py  agent_os_harness_sop.md  architecture_convergence_sop.md  autonomous_operation_sop.md  coding_karpathy_sop.md  convergence_checklist.md  development_workflow_sop.md  graphify_usage.md  hotfix_portback_ledger.md  ljqCtrl_sop.md  skill_best_practices.md  streamlit_pitfalls.md  subagent.md  tmwebdriver_sop.md  understanding_principles_sop.md  web_search_tool_sop.md  web_setup_sop.md
backend/quality_registry/: README.md  gates.yml  validate_quality_registry.py
(+160 files in other folders)
